[package]
name = "host-analzyer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
tonic = "0.10.2"
tonic-reflection = "0.10.2"
prost = "0.12.3"
prost-types = "0.12.3"
sysinfo = "0.30.5"
tokio = { version = "1.35.1", features = ["full"] }
serde_json = "1.0.113"
serde = { version = "1.0.196", features = ["derive"] }

[build-dependencies]
tonic-build = "0.10.2"
